added some animate

--- a/Peter/css/style.css
+++ b/Peter/css/style.css
@@ -104,7 +104,7 @@ article {
 
 article button {
     position: absolute;
-    bottom: 35px;
+    bottom: 1em;
     font-size: 16px;
     padding: 8px;
     min-width: 145px;
